# my_tray

./: CMakeLists.txt  README.md  index.html  main.c  tray_info.json
test/: test_build.sh  test_parse_json.c  tray_menu_data.json
tray/include/: tray.h
tray/src/: tray.c  tray.h
tray/src/list/: list.c  list.h
tray/src/string_list/: string_list.c  string_list.h
